compiler/parser.output
   0  $accept : %entry% $end

   1  program : stmt_list EOF

   2  stmt_list :
   3            | stmt_list stmt

   4  stmt : expr SEMICOLUMN
   5       | func_decl
   6       | RETURN expr SEMICOLUMN
   7       | FOR LEFTROUNDBRACKET for_expr SEMICOLUMN for_expr SEMICOLUMN for_expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET
   8       | IF LEFTROUNDBRACKET expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET ELSE LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET

   9  var_type : INT
  10           | FLOAT
  11           | STRING

  12  formal_list :
  13              | formal
  14              | formal_list SEQUENCE formal

  15  formal : var_type ID

  16  func_decl : var_type ID LEFTROUNDBRACKET formal_list RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET

  17  for_expr :
  18           | expr

  19  expr : literals
  20       | arith_ops
  21       | graph_ops
  22       | NODE LEFTROUNDBRACKET expr RIGHTROUNDBRACKET
  23       | ID
  24       | ID ASSIGN expr
  25       | LEFTBRACKET list RIGHTBRACKET
  26       | LEFTCURLYBRACKET dict RIGHTCURLYBRACKET
  27       | LEFTROUNDBRACKET expr RIGHTROUNDBRACKET
  28       | STRING_LITERAL COLUMN expr
  29       | ID LEFTROUNDBRACKET list RIGHTROUNDBRACKET

  30  list :
  31       | expr
  32       | list SEQUENCE expr

  33  list_graph : expr AMPERSAND expr
  34             | list_graph SEQUENCE expr AMPERSAND expr

  35  list_graph_literal : LEFTBRACKET list_graph RIGHTBRACKET

  36  dict :
  37       | expr
  38       | dict SEQUENCE expr

  39  arith_ops : expr PLUS expr
  40            | expr MINUS expr
  41            | expr TIMES expr
  42            | expr DIVIDE expr
  43            | expr EQUAL expr
  44            | expr NOTEQUAL expr
  45            | expr SMALLER expr
  46            | expr SMALLEREQUAL expr
  47            | expr GREATER expr
  48            | expr GREATEREQUAL expr
  49            | expr AND expr
  50            | expr MOD expr
  51            | expr OR expr
  52            | NOT expr
  53            | MINUS expr
  54            | expr SIMILARITY expr
  55            | expr AT AT expr
  56            | expr AT expr

  57  graph_ops : expr LINK expr
  58            | expr LINK list_graph_literal
  59            | expr LINK expr AMPERSAND expr
  60            | expr RIGHTLINK expr
  61            | expr RIGHTLINK list_graph_literal
  62            | expr RIGHTLINK expr AMPERSAND expr
  63            | expr LEFTLINK expr
  64            | expr LEFTLINK list_graph_literal
  65            | expr LEFTLINK expr AMPERSAND expr

  66  literals : INT_LITERAL
  67           | FLOAT_LITERAL
  68           | STRING_LITERAL

  69  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (69)
	stmt_list : .  (2)

	.  reduce 2

	program  goto 3
	stmt_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (69)

	.  reduce 69


state 4
	program : stmt_list . EOF  (1)
	stmt_list : stmt_list . stmt  (3)

	MINUS  shift 5
	NOT  shift 6
	IF  shift 7
	FOR  shift 8
	RETURN  shift 9
	INT  shift 10
	FLOAT  shift 11
	STRING  shift 12
	NODE  shift 13
	LEFTBRACKET  shift 14
	LEFTCURLYBRACKET  shift 15
	LEFTROUNDBRACKET  shift 16
	EOF  shift 17
	ID  shift 18
	INT_LITERAL  shift 19
	STRING_LITERAL  shift 20
	FLOAT_LITERAL  shift 21
	.  error

	stmt  goto 22
	expr  goto 23
	func_decl  goto 24
	var_type  goto 25
	literals  goto 26
	arith_ops  goto 27
	graph_ops  goto 28


state 5
	arith_ops : MINUS . expr  (53)

	MINUS  shift 5
	NOT  shift 6
	NODE  shift 13
	LEFTBRACKET  shift 14
	LEFTCURLYBRACKET  shift 15
	LEFTROUNDBRACKET  shift 16
	ID  shift 18
	INT_LITERAL  shift 19
	STRING_LITERAL  shift 20
	FLOAT_LITERAL  shift 21
	.  error

	expr  goto 29
	literals  goto 26
	arith_ops  goto 27
	graph_ops  goto 28


state 6
	arith_ops : NOT . expr  (52)

	MINUS  shift 5
	NOT  shift 6
	NODE  shift 13
	LEFTBRACKET  shift 14
	LEFTCURLYBRACKET  shift 15
	LEFTROUNDBRACKET  shift 16
	ID  shift 18
	INT_LITERAL  shift 19
	STRING_LITERAL  shift 20
	FLOAT_LITERAL  shift 21
	.  error

	expr  goto 30
	literals  goto 26
	arith_ops  goto 27
	graph_ops  goto 28


state 7
	stmt : IF . LEFTROUNDBRACKET expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET ELSE LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (8)

	LEFTROUNDBRACKET  shift 31
	.  error


state 8
	stmt : FOR . LEFTROUNDBRACKET for_expr SEMICOLUMN for_expr SEMICOLUMN for_expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (7)

	LEFTROUNDBRACKET  shift 32
	.  error


state 9
	stmt : RETURN . expr SEMICOLUMN  (6)

	MINUS  shift 5
	NOT  shift 6
	NODE  shift 13
	LEFTBRACKET  shift 14
	LEFTCURLYBRACKET  shift 15
	LEFTROUNDBRACKET  shift 16
	ID  shift 18
	INT_LITERAL  shift 19
	STRING_LITERAL  shift 20
	FLOAT_LITERAL  shift 21
	.  error

	expr  goto 33
	literals  goto 26
	arith_ops  goto 27
	graph_ops  goto 28


state 10
	var_type : INT .  (9)

	.  reduce 9


state 11
	var_type : FLOAT .  (10)

	.  reduce 10


state 12
	var_type : STRING .  (11)

	.  reduce 11


state 13
	expr : NODE . LEFTROUNDBRACKET expr RIGHTROUNDBRACKET  (22)

	LEFTROUNDBRACKET  shift 34
	.  error


state 14
	expr : LEFTBRACKET . list RIGHTBRACKET  (25)
	list : .  (30)

	MINUS  shift 5
	NOT  shift 6
	NODE  shift 13
	LEFTBRACKET  shift 14
	LEFTCURLYBRACKET  shift 15
	LEFTROUNDBRACKET  shift 16
	ID  shift 18
	INT_LITERAL  shift 19
	STRING_LITERAL  shift 20
	FLOAT_LITERAL  shift 21
	SEQUENCE  reduce 30
	RIGHTBRACKET  reduce 30

	expr  goto 35
	literals  goto 26
	arith_ops  goto 27
	graph_ops  goto 28
	list  goto 36


state 15
	expr : LEFTCURLYBRACKET . dict RIGHTCURLYBRACKET  (26)
	dict : .  (36)

	MINUS  shift 5
	NOT  shift 6
	NODE  shift 13
	LEFTBRACKET  shift 14
	LEFTCURLYBRACKET  shift 15
	LEFTROUNDBRACKET  shift 16
	ID  shift 18
	INT_LITERAL  shift 19
	STRING_LITERAL  shift 20
	FLOAT_LITERAL  shift 21
	SEQUENCE  reduce 36
	RIGHTCURLYBRACKET  reduce 36

	expr  goto 37
	literals  goto 26
	arith_ops  goto 27
	graph_ops  goto 28
	dict  goto 38


state 16
	expr : LEFTROUNDBRACKET . expr RIGHTROUNDBRACKET  (27)

	MINUS  shift 5
	NOT  shift 6
	NODE  shift 13
	LEFTBRACKET  shift 14
	LEFTCURLYBRACKET  shift 15
	LEFTROUNDBRACKET  shift 16
	ID  shift 18
	INT_LITERAL  shift 19
	STRING_LITERAL  shift 20
	FLOAT_LITERAL  shift 21
	.  error

	expr  goto 39
	literals  goto 26
	arith_ops  goto 27
	graph_ops  goto 28


state 17
	program : stmt_list EOF .  (1)

	.  reduce 1


state 18
	expr : ID .  (23)
	expr : ID . ASSIGN expr  (24)
	expr : ID . LEFTROUNDBRACKET list RIGHTROUNDBRACKET  (29)

	ASSIGN  shift 40
	LEFTROUNDBRACKET  shift 41
	PLUS  reduce 23
	MINUS  reduce 23
	TIMES  reduce 23
	DIVIDE  reduce 23
	MOD  reduce 23
	SEMICOLUMN  reduce 23
	SEQUENCE  reduce 23
	GREATER  reduce 23
	GREATEREQUAL  reduce 23
	SMALLER  reduce 23
	SMALLEREQUAL  reduce 23
	EQUAL  reduce 23
	NOTEQUAL  reduce 23
	AND  reduce 23
	OR  reduce 23
	LINK  reduce 23
	RIGHTLINK  reduce 23
	LEFTLINK  reduce 23
	SIMILARITY  reduce 23
	AT  reduce 23
	AMPERSAND  reduce 23
	RIGHTBRACKET  reduce 23
	RIGHTCURLYBRACKET  reduce 23
	RIGHTROUNDBRACKET  reduce 23


state 19
	literals : INT_LITERAL .  (66)

	.  reduce 66


state 20
	expr : STRING_LITERAL . COLUMN expr  (28)
	literals : STRING_LITERAL .  (68)

	COLUMN  shift 42
	PLUS  reduce 68
	MINUS  reduce 68
	TIMES  reduce 68
	DIVIDE  reduce 68
	MOD  reduce 68
	SEMICOLUMN  reduce 68
	SEQUENCE  reduce 68
	GREATER  reduce 68
	GREATEREQUAL  reduce 68
	SMALLER  reduce 68
	SMALLEREQUAL  reduce 68
	EQUAL  reduce 68
	NOTEQUAL  reduce 68
	AND  reduce 68
	OR  reduce 68
	LINK  reduce 68
	RIGHTLINK  reduce 68
	LEFTLINK  reduce 68
	SIMILARITY  reduce 68
	AT  reduce 68
	AMPERSAND  reduce 68
	RIGHTBRACKET  reduce 68
	RIGHTCURLYBRACKET  reduce 68
	RIGHTROUNDBRACKET  reduce 68


state 21
	literals : FLOAT_LITERAL .  (67)

	.  reduce 67


state 22
	stmt_list : stmt_list stmt .  (3)

	.  reduce 3


state 23
	stmt : expr . SEMICOLUMN  (4)
	arith_ops : expr . PLUS expr  (39)
	arith_ops : expr . MINUS expr  (40)
	arith_ops : expr . TIMES expr  (41)
	arith_ops : expr . DIVIDE expr  (42)
	arith_ops : expr . EQUAL expr  (43)
	arith_ops : expr . NOTEQUAL expr  (44)
	arith_ops : expr . SMALLER expr  (45)
	arith_ops : expr . SMALLEREQUAL expr  (46)
	arith_ops : expr . GREATER expr  (47)
	arith_ops : expr . GREATEREQUAL expr  (48)
	arith_ops : expr . AND expr  (49)
	arith_ops : expr . MOD expr  (50)
	arith_ops : expr . OR expr  (51)
	arith_ops : expr . SIMILARITY expr  (54)
	arith_ops : expr . AT AT expr  (55)
	arith_ops : expr . AT expr  (56)
	graph_ops : expr . LINK expr  (57)
	graph_ops : expr . LINK list_graph_literal  (58)
	graph_ops : expr . LINK expr AMPERSAND expr  (59)
	graph_ops : expr . RIGHTLINK expr  (60)
	graph_ops : expr . RIGHTLINK list_graph_literal  (61)
	graph_ops : expr . RIGHTLINK expr AMPERSAND expr  (62)
	graph_ops : expr . LEFTLINK expr  (63)
	graph_ops : expr . LEFTLINK list_graph_literal  (64)
	graph_ops : expr . LEFTLINK expr AMPERSAND expr  (65)

	PLUS  shift 43
	MINUS  shift 44
	TIMES  shift 45
	DIVIDE  shift 46
	MOD  shift 47
	SEMICOLUMN  shift 48
	GREATER  shift 49
	GREATEREQUAL  shift 50
	SMALLER  shift 51
	SMALLEREQUAL  shift 52
	EQUAL  shift 53
	NOTEQUAL  shift 54
	AND  shift 55
	OR  shift 56
	LINK  shift 57
	RIGHTLINK  shift 58
	LEFTLINK  shift 59
	SIMILARITY  shift 60
	AT  shift 61
	.  error


state 24
	stmt : func_decl .  (5)

	.  reduce 5


state 25
	func_decl : var_type . ID LEFTROUNDBRACKET formal_list RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (16)

	ID  shift 62
	.  error


state 26
	expr : literals .  (19)

	.  reduce 19


state 27
	expr : arith_ops .  (20)

	.  reduce 20


state 28
	expr : graph_ops .  (21)

	.  reduce 21


state 29
	arith_ops : expr . PLUS expr  (39)
	arith_ops : expr . MINUS expr  (40)
	arith_ops : expr . TIMES expr  (41)
	arith_ops : expr . DIVIDE expr  (42)
	arith_ops : expr . EQUAL expr  (43)
	arith_ops : expr . NOTEQUAL expr  (44)
	arith_ops : expr . SMALLER expr  (45)
	arith_ops : expr . SMALLEREQUAL expr  (46)
	arith_ops : expr . GREATER expr  (47)
	arith_ops : expr . GREATEREQUAL expr  (48)
	arith_ops : expr . AND expr  (49)
	arith_ops : expr . MOD expr  (50)
	arith_ops : expr . OR expr  (51)
	arith_ops : MINUS expr .  (53)
	arith_ops : expr . SIMILARITY expr  (54)
	arith_ops : expr . AT AT expr  (55)
	arith_ops : expr . AT expr  (56)
	graph_ops : expr . LINK expr  (57)
	graph_ops : expr . LINK list_graph_literal  (58)
	graph_ops : expr . LINK expr AMPERSAND expr  (59)
	graph_ops : expr . RIGHTLINK expr  (60)
	graph_ops : expr . RIGHTLINK list_graph_literal  (61)
	graph_ops : expr . RIGHTLINK expr AMPERSAND expr  (62)
	graph_ops : expr . LEFTLINK expr  (63)
	graph_ops : expr . LEFTLINK list_graph_literal  (64)
	graph_ops : expr . LEFTLINK expr AMPERSAND expr  (65)

	TIMES  shift 45
	DIVIDE  shift 46
	MOD  shift 47
	LINK  shift 57
	RIGHTLINK  shift 58
	LEFTLINK  shift 59
	SIMILARITY  shift 60
	AT  shift 61
	PLUS  reduce 53
	MINUS  reduce 53
	SEMICOLUMN  reduce 53
	SEQUENCE  reduce 53
	GREATER  reduce 53
	GREATEREQUAL  reduce 53
	SMALLER  reduce 53
	SMALLEREQUAL  reduce 53
	EQUAL  reduce 53
	NOTEQUAL  reduce 53
	AND  reduce 53
	OR  reduce 53
	AMPERSAND  reduce 53
	RIGHTBRACKET  reduce 53
	RIGHTCURLYBRACKET  reduce 53
	RIGHTROUNDBRACKET  reduce 53


state 30
	arith_ops : expr . PLUS expr  (39)
	arith_ops : expr . MINUS expr  (40)
	arith_ops : expr . TIMES expr  (41)
	arith_ops : expr . DIVIDE expr  (42)
	arith_ops : expr . EQUAL expr  (43)
	arith_ops : expr . NOTEQUAL expr  (44)
	arith_ops : expr . SMALLER expr  (45)
	arith_ops : expr . SMALLEREQUAL expr  (46)
	arith_ops : expr . GREATER expr  (47)
	arith_ops : expr . GREATEREQUAL expr  (48)
	arith_ops : expr . AND expr  (49)
	arith_ops : expr . MOD expr  (50)
	arith_ops : expr . OR expr  (51)
	arith_ops : NOT expr .  (52)
	arith_ops : expr . SIMILARITY expr  (54)
	arith_ops : expr . AT AT expr  (55)
	arith_ops : expr . AT expr  (56)
	graph_ops : expr . LINK expr  (57)
	graph_ops : expr . LINK list_graph_literal  (58)
	graph_ops : expr . LINK expr AMPERSAND expr  (59)
	graph_ops : expr . RIGHTLINK expr  (60)
	graph_ops : expr . RIGHTLINK list_graph_literal  (61)
	graph_ops : expr . RIGHTLINK expr AMPERSAND expr  (62)
	graph_ops : expr . LEFTLINK expr  (63)
	graph_ops : expr . LEFTLINK list_graph_literal  (64)
	graph_ops : expr . LEFTLINK expr AMPERSAND expr  (65)

	LINK  shift 57
	RIGHTLINK  shift 58
	LEFTLINK  shift 59
	SIMILARITY  shift 60
	AT  shift 61
	PLUS  reduce 52
	MINUS  reduce 52
	TIMES  reduce 52
	DIVIDE  reduce 52
	MOD  reduce 52
	SEMICOLUMN  reduce 52
	SEQUENCE  reduce 52
	GREATER  reduce 52
	GREATEREQUAL  reduce 52
	SMALLER  reduce 52
	SMALLEREQUAL  reduce 52
	EQUAL  reduce 52
	NOTEQUAL  reduce 52
	AND  reduce 52
	OR  reduce 52
	AMPERSAND  reduce 52
	RIGHTBRACKET  reduce 52
	RIGHTCURLYBRACKET  reduce 52
	RIGHTROUNDBRACKET  reduce 52


state 31
	stmt : IF LEFTROUNDBRACKET . expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET ELSE LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (8)

	MINUS  shift 5
	NOT  shift 6
	NODE  shift 13
	LEFTBRACKET  shift 14
	LEFTCURLYBRACKET  shift 15
	LEFTROUNDBRACKET  shift 16
	ID  shift 18
	INT_LITERAL  shift 19
	STRING_LITERAL  shift 20
	FLOAT_LITERAL  shift 21
	.  error

	expr  goto 63
	literals  goto 26
	arith_ops  goto 27
	graph_ops  goto 28


state 32
	stmt : FOR LEFTROUNDBRACKET . for_expr SEMICOLUMN for_expr SEMICOLUMN for_expr RIGHTROUNDBRACKET LEFTCURLYBRACKET stmt_list RIGHTCURLYBRACKET  (7)
	for_expr : .  (17)

	MINUS  shift 5
	NOT  shift 6
	NODE  shift 13
	LEFTBRACKET  shift 14
	LEFTCURLYBRACKET  shift 15
	LEFTROUNDBRACKET  shift 16
	ID  shift 18
	INT_LITERAL  shift 19
	STRING_LITERAL  shift 20
	FLOAT_LITERAL  shift 21
	SEMICOLUMN  reduce 17

	expr  goto 64
	for_expr  goto 65
	literals  goto 26
	arith_ops  goto 27
	graph_ops  goto 28


state 33
	stmt : RETURN expr . SEMICOLUMN  (6)
	arith_ops : expr . PLUS expr  (39)
	arith_ops : expr . MINUS expr  (40)
	arith_ops : expr . TIMES expr  (41)
	arith_ops : expr . DIVIDE expr  (42)
	arith_ops : expr . EQUAL expr  (43)
	arith_ops : expr . NOTEQUAL expr  (44)
	arith_ops : expr . SMALLER expr  (45)
	arith_ops : expr . SMALLEREQUAL expr  (46)
	arith_ops : expr . GREATER expr  (47)
	arith_ops : expr . GREATEREQUAL expr  (48)
	arith_ops : expr . AND expr  (49)
	arith_ops : expr . MOD expr  (50)
	arith_ops : expr . OR expr  (51)
	arith_ops : expr . SIMILARITY expr  (54)
	arith_ops : expr . AT AT expr  (55)
	arith_ops : expr . AT expr  (56)
	graph_ops : expr . LINK expr  (57)
	graph_ops : expr . LINK list_graph_literal  (58)
	graph_ops : expr . LINK expr AMPERSAND expr  (59)
	graph_ops : expr . RIGHTLINK expr  (60)
	graph_ops : expr . RIGHTLINK list_graph_literal  (61)
	graph_ops : expr . RIGHTLINK expr AMPERSAND expr  (62)
	graph_ops : expr . LEFTLINK expr  (63)
	graph_ops : expr . LEFTLINK list_graph_literal  (64)
	graph_ops : expr . LEFTLINK expr AMPERSAND expr  (65)

	PLUS  shift 43
	MINUS  shift 44
	TIMES  shift 45
	DIVIDE  shift 46
	MOD  shift 47
	SEMICOLUMN  shift 66
	GREATER  shift 49
	GREATEREQUAL  shift 50
	SMALLER  shift 51
	SMALLEREQUAL  shift 52
	EQUAL  shift 53
	NOTEQUAL  shift 54
	AND  shift 55
	OR  shift 56
	LINK  shift 57
	RIGHTLINK  shift 58
	LEFTLINK  shift 59
	SIMILARITY  shift 60
	AT  shift 61
	.  error


state 34
	expr : NODE LEFTROUNDBRACKET . expr RIGHTROUNDBRACKET  (22)

	MINUS  shift 5
	NOT  shift 6
	NODE  shift 13
	LEFTBRACKET  shift 14
	LEFTCURLYBRACKET  shift 15
	LEFTROUNDBRACKET  shift 16
	ID  shift 18
	INT_LITERAL  shift 19
	STRING_LITERAL  shift 20
	FLOAT_LITERAL  shift 21
	.  error

	expr  goto 67
	literals  goto 26
	arith_ops  goto 27
	graph_ops  goto 28


state 35
	list : expr .  (31)
	arith_ops : expr . PLUS expr  (39)
	arith_ops : expr . MINUS expr  (40)
	arith_ops : expr . TIMES expr  (41)
	arith_ops : expr . DIVIDE expr  (42)
	arith_ops : expr . EQUAL expr  (43)
	arith_ops : expr . NOTEQUAL expr  (44)
	arith_ops : expr . SMALLER expr  (45)
	arith_ops : expr . SMALLEREQUAL expr  (46)
	arith_ops : expr . GREATER expr  (47)
	arith_ops : expr . GREATEREQUAL expr  (48)
	arith_ops : expr . AND expr  (49)
	arith_ops : expr . MOD expr  (50)
	arith_ops : expr . OR expr  (51)
	arith_ops : expr . SIMILARITY expr  (54)
	arith_ops : expr . AT AT expr  (55)
	arith_ops : expr . AT expr  (56)
	graph_ops : expr . LINK expr  (57)
	graph_ops : expr . LINK list_graph_literal  (58)
	graph_ops : expr . LINK expr AMPERSAND expr  (59)
	graph_ops : expr . RIGHTLINK expr  (60)
	graph_ops : expr . RIGHTLINK list_graph_literal  (61)
	graph_ops : expr . RIGHTLINK expr AMPERSAND expr  (62)
	graph_ops : expr . LEFTLINK expr  (63)
	graph_ops : expr . LEFTLINK list_graph_literal  (64)
	graph_ops : expr . LEFTLINK expr AMPERSAND expr  (65)

	PLUS  shift 43
	MINUS  shift 44
	TIMES  shift 45
	DIVIDE  shift 46
	MOD  shift 47
	GREATER  shift 49
	GREATEREQUAL  shift 50
	SMALLER  shift 51
	SMALLEREQUAL  shift 52
	EQUAL  shift 53
	NOTEQUAL  shift 54
	AND  shift 55
	OR  shift 56
	LINK  shift 57
	RIGHTLINK  shift 58
	LEFTLINK  shift 59
	SIMILARITY  shift 60
	AT  shift 61
	SEQUENCE  reduce 31
	RIGHTBRACKET  reduce 31
	RIGHTROUNDBRACKET  reduce 31


state 36
	expr : LEFTBRACKET list . RIGHTBRACKET  (25)
	list : list . SEQUENCE expr  (32)

	SEQUENCE  shift 68
	RIGHTBRACKET  shift 69
	.  error


state 37
	dict : expr .  (37)
	arith_ops : expr . PLUS expr  (39)
	arith_ops : expr . MINUS expr  (40)
	arith_ops : expr . TIMES expr  (41)
	arith_ops : expr . DIVIDE expr  (42)
	arith_ops : expr . EQUAL expr  (43)
	arith_ops : expr . NOTEQUAL expr  (44)
	arith_ops : expr . SMALLER expr  (45)
	arith_ops : expr . SMALLEREQUAL expr  (46)
	arith_ops : expr . GREATER expr  (47)
	arith_ops : expr . GREATEREQUAL expr  (48)
	arith_ops : expr . AND expr  (49)
	arith_ops : expr . MOD expr  (50)
	arith_ops : expr . OR expr  (51)
	arith_ops : expr . SIMILARITY expr  (54)
	arith_ops : expr . AT AT expr  (55)
	arith_ops : expr . AT expr  (56)
	graph_ops : expr . LINK expr  (57)
	graph_ops : expr . LINK list_graph_literal  (58)
	graph_ops : expr . LINK expr AMPERSAND expr  (59)
	graph_ops : expr . RIGHTLINK expr  (60)
	graph_ops : expr . RIGHTLINK list_graph_literal  (61)
	graph_ops : expr . RIGHTLINK expr AMPERSAND expr  (62)
	graph_ops : expr . LEFTLINK expr  (63)
	graph_ops : expr . LEFTLINK list_graph_literal  (64)
	graph_ops : expr . LEFTLINK expr AMPERSAND expr  (65)
